# stdpopsim

./: .gitignore  .readthedocs.yml  CHANGELOG.rst  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py  stdvoidsim_example.ipynb  validation.py
.github/workflows/: docs.yml  (+2 more)
.test/: README.txt  install_and_run.sh  run_cli_test.sh  run_simulation.py  run_slim_test.py
docs/: Makefile  api.rst  catalog.rst  cli_arguments.rst  conf.py  development.rst  examples.py  index.rst  installation.rst  introduction.rst  selection_example.py  tutorial.rst
maintenance/: annotation_maint.py  ensembl.py  liftOver.py  liftOver_catalog.py  main.py  ncbi.py
requirements/: rtd-conda-environment.yml
stdpopsim/: __init__.py  citations.py  cli.py
stdvoidsim/: __init__.py  __main__.py  annotations.py  cache.py  citations.py  cli.py  dfe.py  engines.py  genetic_maps.py  genomes.py  models.py  slim_engine.py  species.py  utils.py
tests/: __init__.py  conftest.py  test_AedAeg.py  test_AnaPla.py  test_AnoCar.py  test_AnoGam.py  test_ApiMel.py  test_AraTha.py  test_BosTau.py  test_CaeEle.py  test_CanFam.py  test_ChlRei.py  test_DroMel.py  test_DroSec.py  test_EscCol.py  test_GasAcu.py  test_GorGor.py  test_HelAnn.py  test_HelMel.py  test_HomSap.py  test_MusMus.py  test_OrySat.py  test_PanTro.py  test_PapAnu.py  test_PhoSin.py  test_PonAbe.py  test_RatNor.py  test_StrAga.py  test_SusScr.py  test_annotations.py  test_cache.py  test_citations.py  test_cli.py  test_dfes.py  test_engines.py  test_genetic_maps.py  test_genomes.py  test_masking.py  test_models.py  test_slim_engine.py  (+2 more)
(+262 files in other folders)
