[build-system]
# We need setup.cfg support, which setuptools introduced in 30.3.0.
requires = ["setuptools>=30.3.0", "wheel", "setuptools_scm"]

[tool.setuptools_scm]
# Version from git tags (e.g. v0.1.0 -> 0.1.0). Untagged builds get dev versions.
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
tag_regex = "^v(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+)$"
